# pyro-blur

./: .gitignore  CLAUDE.md  Dockerfile  README.md  data.yaml  docker-compose.yml  main.py  pyproject.toml  requirements.txt  user_prompt.md
docker/: docker-init.sh
pyro_blur/: __init__.py
scripts/: benchmark_models.py  dataset_downloader.py  train_yolo11.py
